# pdbr

./: .gitignore  .inputrc  .pdbrc  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml  runtests.py  setup.cfg  test.py
.github/workflows/: release.yml  tests.yml
pdbr/: __init__.py  __main__.py  _cm.py  _console_layout.py  _pdbr.py  cli.py  diff_command.py  helpers.py  ipython_magics.py  logging.py  middleware.py  pdbr_shell.py  runner.py  utils.py  whereami.py
pdbr/middlewares/: starlette.py
scripts/: lint  test
tests/: conftest.py  test_api.py  test_config.py  test_diff_command.py  test_logging.py  test_magic.py  test_pdbr.py  test_whereami.py
tests/tests_django/: test_settings.py  tests.py  urls.py
