[tool.poetry]
name = "pdbr"
version = "0.7.1"
description = "Pdb with Rich library."
authors = ["Can Sarigol <ertugrulsarigol@gmail.com>"]
packages = [
    { include = "pdbr" }
]
readme = "README.md"
homepage = "https://github.com/cansarigol/pdbr"
repository = "https://github.com/cansarigol/pdbr"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.7.9"
rich = "^12.0.0"
celery = {version = "^5.2.2", optional = true}
ipython = {version = "^7.7", optional = true}
icecream = "^2.1.0"
pyreadline = {version="^2.1", markers="sys_platform == 'win32'"}
sqlparse = "^0.4.2"

[tool.poetry.dev-dependencies]
nox = "^2020.5.24"

[tool.poetry.extras]
celery = ["celery"]
ipython = ["ipython"]

[tool.poetry.scripts]
pdbr = 'pdbr.cli:shell'
pdbr_telnet = 'pdbr.cli:telnet'

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.vulture]
make_whitelist = true
min_confidence = 80
paths = ["pdbr", "tests"]
sort_by_size = true
verbose = false
